--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"simple-statistics": "^7.8.3",
 		"svelte-maplibre": "git+https://github.com/dabreegster/svelte-maplibre.git#svelte5",
 		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.1.20"
+		"tailwind-variants": "^0.1.20",
+		"vaul-svelte": "^0.2.3"
 	}
 }
