--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
 	"type": "module",
 	"dependencies": {
 		"@loaders.gl/netcdf": "^4.0.4",
+		"@turf/boolean-intersects": "^6.5.0",
+		"@turf/boolean-overlap": "^6.5.0",
 		"@turf/centroid": "^6.5.0",
+		"@turf/helpers": "^6.5.0",
 		"bits-ui": "^0.17.0",
 		"chroma-js": "^2.4.2",
 		"clsx": "^2.1.0",
@@ -56,6 +59,7 @@
 		"radix-icons-svelte": "^1.2.1",
 		"simple-statistics": "^7.8.3",
 		"svelte-maplibre": "git+https://github.com/dabreegster/svelte-maplibre.git#svelte5",
+		"svelte-plotly.js": "^0.3.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20",
 		"vaul-svelte": "^0.2.3"
